tests/sumo/spec/flow/errors/repetition_missing/errors.sumo
Error: At least one of 'period', 'vehsPerHour', 'personsPerHour', 'containersPerHour', 'perHour', 'probability', and 'number' is needed in flow 'f1'.
Quitting (on error).
